name:                dhtsync
version:             0.1.0.0
synopsis:            DHT file synchronizer
description:         Please see README.md
homepage:            https://github.com/githubuser/test#readme
license:             GPL-3
license-file:        LICENSE
author:              Dario Meloni
maintainer:          mellon85@gmail.com
copyright:           2016 Dario Meloni
category:            Web
build-type:          Simple
extra-source-files:  cbits
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DHT, DB, FSWatcher, Server, Logger
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cc-options: -O2
  c-sources: cbits/dht_ffi.c
  build-depends:       base >= 4.7 && < 5, cryptonite, memory, random, network,
       stm, mtl, time, text, directory >=1.2.2, array, bytestring, conduit,
       HDBC, HDBC-sqlite3, containers, iproute, hslogger, resourcet,
       transformers
  default-language:    Haskell2010

executable dht-sync
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, dhtsync, hslogger
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       DBtest, MyArbitrary
  main-is:             Spec.hs
  build-depends:       base, dhtsync, QuickCheck, HDBC, time, bytestring, containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mellon85/dhtsync

