name:                dhtsync
version:             0.1.0.0
synopsis:            DHT file synchronizer
description:         Please see README.md
homepage:            https://github.com/githubuser/test#readme
license:             GPL-3
license-file:        LICENSE
author:              Dario Meloni
maintainer:          mellon85@gmail.com
copyright:           2016 Dario Meloni
category:            Web
build-type:          Simple
extra-source-files:  cbits/dht_ffi.c cbits/dht_ffi.h cbits/dht/dht.h cbits/dht/dht.c
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DB, FSWatcher, Server, Logger, FileEntry, Discover.DHT,
                       Discover.Broadcast, HashUtils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  cc-options: -O2
  c-sources: cbits/dht_ffi.c
  build-depends:       base >= 4.7 && < 5, cryptonite, memory, random, network,
       stm, mtl, time, text, directory >=1.2, array, bytestring, conduit,
       HDBC, HDBC-sqlite3, containers, iproute, hslogger, resourcet,
       transformers, aeson, async
  default-language:    Haskell2010
  
executable dht-sync
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, dhtsync, hslogger, aeson, text, bytestring, directory
  default-language:    Haskell2010
  other-modules:     Configuration

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       DBtest, MyArbitrary, FSWatcherTest
  main-is:             Spec.hs
  build-depends:       base, dhtsync, QuickCheck, HDBC, time, bytestring,
    containers, conduit, cryptonite, random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mellon85/dhtsync

